Add extension for UrlMapper Allow to make Ourput url start with "~" as current domain.

--- a/Kooboo.Toolkits/packages/repositories.config
+++ b/Kooboo.Toolkits/packages/repositories.config
@@ -3,5 +3,6 @@
   <repository path="..\Kooboo.CMS.Content.DatabaseMigration\packages.config" />
   <repository path="..\Kooboo.CMS.Content.UserKeyGenerator.Chinese\packages.config" />
   <repository path="..\Kooboo.CMS.Toolkit.HtmlMinify\packages.config" />
+  <repository path="..\Kooboo.Extensions.UrlMapperExtension\packages.config" />
   <repository path="..\UnitTests\Kooboo.Toolkits.Test\packages.config" />
 </repositories>
