1,remove duplicated control "MediaFiles" in Kooboo.CMS.Toolkit.Controls project. 2,fix UrlMapperExtension bug

--- a/Kooboo.Toolkits/Kooboo.Extensions.UrlMapperExtension/Kooboo.Extensions.UrlMapperExtension.csproj
+++ b/Kooboo.Toolkits/Kooboo.Extensions.UrlMapperExtension/Kooboo.Extensions.UrlMapperExtension.csproj
@@ -107,6 +107,7 @@
     <Compile Include="..\CMSAssemblyInfoGlobal.cs">
       <Link>CMSAssemblyInfoGlobal.cs</Link>
     </Compile>
+    <Compile Include="CustomUrlMapperRegister.cs" />
     <Compile Include="UrlMapperExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
